--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,5 +9,11 @@
     <header>
         <h1>Automotriz</h1>
     </header>
+    <main>
+        <p>Clase de git / github</p>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
